# WebRTCAudioEffect

./: settings.gradle
AudioEffectTestFile/aecm/: out.pcm
AudioEffectTestFile/agc/: out.pcm
AudioEffectTestFile/ns/: out.pcm
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/feifei/webrtcaudioeffect/: MainActivity.java
app/src/main/java/com/feifei/webrtcaudioeffect/AudioEffect/: AcousticEchoCancellationUtils.java  AcousticEchoCancellerMobileUtils.java  AudioEffectUtils.java  AutomaticGainControl.java  NoiseSuppressionUtils.java  NoiseSuppressionXUtils.java  RNNoiseUtils.java  VoiceActivityDetectionUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
jni/acoustic-echo cancellion-mobile/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/acoustic-echo-cancellation/: CMakeLists.txt
jni/acoustic-echo-cancellation/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/acoustic-echo-cancellation/src/: Android_JNI.cpp
jni/acoustic-echo-cancellion-mobile/: CMakeLists.txt
jni/acoustic-echo-cancellion-mobile/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/acoustic-echo-cancellion-mobile/src/: Android_JNI.cpp
jni/automatic-gain-control/: CMakeLists.txt
jni/automatic-gain-control/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/automatic-gain-control/src/: Android_JNI.cpp  agc.c
jni/noise-suppression/: CMakeLists.txt
jni/noise-suppression-x/: CMakeLists.txt
jni/noise-suppression-x/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/noise-suppression-x/src/: Android_JNI.cpp  noise_suppression_x.c  noise_suppression_x.h
jni/noise-suppression/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h  com_feifei_webrtcnoisesuppression_jni_NoiseSuppressionEngine.h
jni/noise-suppression/src/: noise_suppression_native.cpp
jni/rnnoise/: CMakeLists.txt
jni/rnnoise/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/rnnoise/src/: Android_JNI.cpp
jni/voice-activity-detection/: CMakeLists.txt
jni/voice-activity-detection/inc/: com_feifei_webrtcaudioeffect_jni_AudioEffect.h
jni/voice-activity-detection/src/: Android_JNI.cpp
